sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:7: error: illegal start of simple expression
    for(i<-1 to (n-1)).reverse) {
                      ^